Fix layout bugs

--- a/src/_includes/base.scss
+++ b/src/_includes/base.scss
@@ -80,3 +80,15 @@ code {
   padding: 4px 6px;
   font-size: 76%;
 }
+
+.wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  .navbar-offset-wrapper {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+  }
+}
