--- a/src/_includes/category-index.scss
+++ b/src/_includes/category-index.scss
@@ -30,6 +30,7 @@
 // }
 
 .category-index {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   background-color: var(--color-background);
